--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 /****CSS DOCUMENT *****/
 html{
 	font-size: 16px;
-	height: 100%;
 }
 
 body {
@@ -12,8 +11,6 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-flow: row wrap;
-	height: 100%;
 }
 
 .container{
@@ -45,28 +42,35 @@ h3 {
 p {
 	font-size: 0.88em;
 	line-height: 21px;
-  padding: 0 30px;
+}
+
+ul {
+	margin: 0;
 }
 
 /*The widths are in a percentage!*/
 header {
+	border-bottom: 3px solid #77a466;
+	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-flow: column;
+	flex-flow: row wrap;
 	width: 100%;
 }
 
 header h1 {
 	margin: 0;
-	padding: 20px 20px;
+	padding: 38px 20px 20px 20px;
 	border-bottom: 3px solid #77a466;
+	width: 100%;
 }
 header h1 span {
 	color: #77a466;
 }
 header nav {
 	padding: 20px 0;
+	width: 100%;
 }
 header nav ul {
 	margin: 0;
@@ -77,11 +81,7 @@ header nav ul li {
 	font-weight: 700;
 	font-size: 0.88em;
 	padding: 0 10px;
-	display: flex;
-	flex-flow: column;
-	justify-content: space-between;
-	align-items: center;
-	line-height: 40px;
+	list-style: none;
 }
 header nav ul li a{
 	text-decoration: none;
@@ -91,26 +91,17 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
-	width: 100%;
 }
 
-.main-image {
-	height: auto;
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
-	border-top: 3px solid #77a466;
 }
 
-.main-title {
-	height: 100%;
-}
 .main-title h2 {
 	text-align: left;
 	padding: 5px 0;
@@ -119,7 +110,7 @@ header nav ul li a{
 .main-title p {
 	padding: 0;
 	font-size: 1em;
-	line-height: 25px;
+	line-height: 1.5625;
 }
 
 .section-one,
@@ -127,62 +118,33 @@ header nav ul li a{
 .section-three {
 	width: 100%;
 	border-top: 1px solid #eee;
-	justify-content: center;
-	align-items: center;
-	display: flex;
-	flex-flow: column;
-}
-
-.section-one h3 {
-	padding: 12px 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h3,
-.section-three h3 {
-	padding: 10px 30px;
-	align-items: center;
-	width: 100%;
 }
 
 .menu {
 	list-style: none;
-	display: flex;
-	width: 100%;
-	flex-flow: column;
+	padding: 0;
 }
 .menu li {
 	padding: 10px 0;
 	color:#77a466;
-	align-items: center;
 }
 
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
-	display: flex;
-	align-items: center;
-	width: 100%;
+	line-height: 1.3125;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
-	display: flex;
-	align-items: center;
-	width: 100%;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
 footer {
 	border-top: 3px solid #eee;
-	margin: 0 auto;
 	text-align: center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -193,4 +155,47 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: 0.88em;
+}
+
+/***** TABLETS *****/
+@media all and (min-width:768px) {
+	.bottom-section {
+		justify-content: space-between;
+		align-items: flex-start;
+		border-top: 1px solid #eee;
+	}
+	.section-one,
+	.section-two,
+	.section-three {
+		border-top: none;
+		flex-basis: 30%;
+	}
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0 20px;
+	}
+
+
+/***** DESKTOP *****/
+@media all and (min-width:1200px) {
+	header {
+		justify-content: space-between;
+	}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left
+	}
+
+	header nav {
+		width: 40%;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
 }
